--- a/event_application.yml
+++ b/event_application.yml
@@ -43,12 +43,12 @@ custom_fields:
     - 5 or more
    hidden: True
  - name: been_to_hackumass
-   label: 'Have you previously attended HackUMass?'
+   label: 'Have you previously attended Hack(H)er413?'
    type: boolean
    required: True
-   toggle_field: previous_hackumass_comments
- - name: previous_hackumass_comments
-   label: "Since you've attended HackUMass before, is there anything new or different you'd like to see at HackUMass IX?"
+   toggle_field: previous_hackher_comments
+ - name: previous_hackher_comments
+   label: "Since you've attended Hack(H)er413 before, is there anything new or different you'd like to see at Hack(H)er413 2022?"
    type: textarea
    max_chars: 500
    hidden: True
@@ -81,7 +81,7 @@ custom_fields:
    type: textarea
    max_chars: 500
  - name: get_out_of_hum
-   label: 'What would you like to get out of HackUMass IX? (select all that apply)'
+   label: 'What would you like to get out of Hack(H)er413 2022? (select all that apply)'
    type: multiselect
    options:
     - Learn more about hardware and hardware hacking
@@ -96,19 +96,19 @@ custom_fields:
    type: boolean
    required: True
  - name: hardware_interest
-   label: "Are you interested in attending hardware workshops at HackUMass IX?"
+   label: "Are you interested in attending hardware workshops at Hack(H)er413 2022"
    type: boolean
    required: True
  - name: software_interest
-   label: "Are you interested in attending software workshops at HackUMass IX?"
+   label: "Are you interested in attending software workshops at Hack(H)er413 2022?"
    type: boolean
    required: True
  - name: how_did_you_hear
-   label: 'How did you hear about HackUMass IX?'
+   label: 'How did you hear about Hack(H)er413 2022?'
    type: multiselect
    required: True
    options:
-    - I previously attended HackUMass
+    - I previously attended Hack(H)er413
     - From the MLH website
     - From HackHer413
     - From another MLH event
@@ -119,14 +119,14 @@ custom_fields:
     - I go to UMass
     - Other
  - name: what_hardware
-   label: 'What type of online activities would you like to see at HackUMass IX?'
+   label: 'What type of online activities would you like to see at Hack(H)er413 2022?'
    type: 'textarea'
    max_chars: 500
  - name: fun_question
-   label: "Phew! That application was a bit long, but you're almost done! :D Just for fun... what's your spirit animal?"
- - name: host_workshop
-   label: "Would you be interested in hosting a workshop? You will have full creative freedom to host a workshop and teach others about the topic of your choice."
-   type: select
-   options:
-    - Yes, I am interested in hosting a workshop.
-    - No, I am not interested. 
+   label: "Phew! That application was a bit long, but you're almost done! :D Just for fun... what's your form of potato (french fries, tater tots, ect.)?"
+#  - name: host_workshop
+#    label: "Would you be interested in hosting a workshop? You will have full creative freedom to host a workshop and teach others about the topic of your choice."
+#    type: select
+#    options:
+#     - Yes, I am interested in hosting a workshop.
+#     - No, I am not interested. 
