--- a/hackathon.yml
+++ b/hackathon.yml
@@ -5,7 +5,7 @@ dashboard_url: dashboard.hackher413.com
 logos:
   primary_path: 2022hackher_logo.png
   nav_path: navlogo.png
-  favicon_url: https://hackumass.com/assets/img/favicon-hum9.ico #what
+  favicon_url: https://hackher413.com/assets/images/2022/favicon.ico
 emails:
   donotreply: noreply@hackumass.com #what
   contact: hackher413@gmail.com
