--- a/hackathon.yml
+++ b/hackathon.yml
@@ -7,7 +7,7 @@ logos:
   nav_path: navlogo.png
   favicon_url: https://hackher413.com/assets/images/2022/favicon.ico
 emails:
-  donotreply: noreply@hackumass.com #what
+  donotreply: noreply@hackher413.com
   contact: hackher413@gmail.com
   email_verification: false
 slack:
